--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 annotated-types==0.7.0
-anyio==4.9.0
+anyio==3.7.1
 attrs==25.3.0
 blinker==1.9.0
 cachetools==5.5.2
@@ -8,18 +8,18 @@ charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
 dnspython==2.7.0
-easyocr==1.7.2
+easyocr==1.7.1
 email_validator==2.2.0
-fastapi==0.115.12
+fastapi==0.104.1
 fastapi-cli==0.0.7
 filelock==3.18.0
 Flask==3.1.0
 fsspec==2025.3.2
 google-api-core==2.24.2
-google-api-python-client==2.168.0
+google-api-python-client==2.108.0
 google-auth==2.39.0
-google-auth-httplib2==0.2.0
-google-auth-oauthlib==1.2.2
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
 googleapis-common-protos==1.70.0
 gunicorn==23.0.0
 h11==0.16.0
@@ -37,49 +37,49 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
-networkx==3.4.2
+networkx==3.2.1
 ninja==1.11.1.4
-numpy==2.2.6
+numpy==1.24.3
 oauthlib==3.2.2
-openai==1.76.0
-opencv-python-headless==4.11.0.86
+openai==1.3.5
+opencv-python-headless==4.8.0.76
 outcome==1.3.0.post0
 packaging==25.0
-pillow==11.2.1
+pillow==10.1.0
 proto-plus==1.26.1
 protobuf==6.30.2
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyclipper==1.3.0.post6
-pydantic==2.11.3
-pydantic_core==2.33.1
+pydantic==2.5.2
+pydantic-core==2.14.5
 Pygments==2.19.1
 pyparsing==3.2.3
 PySocks==1.7.1
 python-bidi==0.6.6
-python-dotenv==1.1.0
-python-multipart==0.0.20
+python-dotenv==1.0.0
+python-multipart==0.0.6
 PyYAML==6.0.2
 requests==2.32.3
 requests-oauthlib==2.0.0
 rich==14.0.0
 rich-toolkit==0.14.7
 rsa==4.9.1
-scikit-image==0.25.2
-scipy==1.15.3
-selenium==4.31.0
+scikit-image==0.21.0
+scipy==1.10.1
+selenium==4.15.2
 setuptools==80.7.1
-shapely==2.1.0
+shapely==1.8.5
 shellingham==1.5.4
 sniffio==1.3.1
 sortedcontainers==2.4.0
-SQLAlchemy==2.0.41
-starlette==0.46.2
+SQLAlchemy==2.0.23
+starlette==0.27.0
 sympy==1.14.0
-tifffile==2025.5.10
-torch==2.7.0
-torchvision==0.22.0
+tifffile==2024.1.30
+torch==2.0.1
+torchvision==0.15.2
 tqdm==4.67.1
 trio==0.30.0
 trio-websocket==0.12.2
@@ -88,10 +88,11 @@ typing-inspection==0.4.0
 typing_extensions==4.13.2
 uritemplate==4.1.1
 urllib3==2.4.0
-uvicorn==0.34.2
+uvicorn==0.24.0
 uvloop==0.21.0
 watchfiles==1.0.5
 websocket-client==1.8.0
 websockets==15.0.1
 Werkzeug==3.1.3
 wsproto==1.2.0
+matplotlib==3.7.1
