--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,24 @@
 annotated-types==0.7.0
-anyio==3.7.1
-attrs==25.3.0
-blinker==1.9.0
+anyio==4.9.0
 cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.1
-click==8.1.8
+certifi==2025.6.15
+charset-normalizer==3.4.2
+click==8.2.1
 distro==1.9.0
 dnspython==2.7.0
-easyocr==1.7.1
+easyocr==1.7.2
 email_validator==2.2.0
-fastapi==0.104.1
+fastapi==0.115.13
 fastapi-cli==0.0.7
 filelock==3.18.0
-Flask==3.1.0
-fsspec==2025.3.2
-google-api-core==2.24.2
-google-api-python-client==2.108.0
-google-auth==2.39.0
-google-auth-httplib2==0.1.1
-google-auth-oauthlib==1.1.0
+fsspec==2025.5.1
+google-api-core==2.25.1
+google-api-python-client==2.172.0
+google-auth==2.40.3
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
 googleapis-common-protos==1.70.0
-gunicorn==23.0.0
+greenlet==3.2.3
 h11==0.16.0
 httpcore==1.0.9
 httplib2==0.22.0
@@ -29,68 +26,61 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 imageio==2.37.0
-itsdangerous==2.2.0
 Jinja2==3.1.6
-jiter==0.9.0
+jiter==0.10.0
 lazy_loader==0.4
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 mpmath==1.3.0
-networkx==3.2.1
+networkx==3.5
 ninja==1.11.1.4
-numpy==1.24.3
-oauthlib==3.2.2
-openai==1.3.5
-opencv-python-headless==4.8.0.76
-outcome==1.3.0.post0
+numpy==2.3.0
+oauthlib==3.3.0
+openai==1.88.0
+opencv-python-headless==4.11.0.86
 packaging==25.0
-pillow==10.1.0
+pillow==11.2.1
+playwright==1.52.0
 proto-plus==1.26.1
-protobuf==6.30.2
+protobuf==6.31.1
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyclipper==1.3.0.post6
-pydantic==2.5.2
-pydantic-core==2.14.5
+pydantic==2.11.7
+pydantic_core==2.33.2
+pyee==13.0.0
 Pygments==2.19.1
 pyparsing==3.2.3
-PySocks==1.7.1
 python-bidi==0.6.6
-python-dotenv==1.0.0
-python-multipart==0.0.6
+python-dotenv==1.1.0
+python-multipart==0.0.20
 PyYAML==6.0.2
-requests==2.32.3
+requests==2.32.4
 requests-oauthlib==2.0.0
 rich==14.0.0
 rich-toolkit==0.14.7
 rsa==4.9.1
-scikit-image==0.21.0
-scipy==1.10.1
-selenium==4.15.2
-setuptools==80.7.1
-shapely==1.8.5
+scikit-image==0.25.2
+scipy==1.15.3
+setuptools==80.9.0
+shapely==2.1.1
 shellingham==1.5.4
 sniffio==1.3.1
-sortedcontainers==2.4.0
-SQLAlchemy==2.0.23
-starlette==0.27.0
+SQLAlchemy==2.0.41
+starlette==0.46.2
 sympy==1.14.0
-tifffile==2024.1.30
+tifffile==2025.6.11
+torch==2.7.1
+torchvision==0.22.1
 tqdm==4.67.1
-trio==0.30.0
-trio-websocket==0.12.2
 typer==0.16.0
-typing-inspection==0.4.0
-typing_extensions==4.13.2
-uritemplate==4.1.1
-urllib3==2.4.0
-uvicorn==0.24.0
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+uritemplate==4.2.0
+urllib3==2.5.0
+uvicorn==0.34.3
 uvloop==0.21.0
-watchfiles==1.0.5
-websocket-client==1.8.0
+watchfiles==1.1.0
 websockets==15.0.1
-Werkzeug==3.1.3
-wsproto==1.2.0
-matplotlib==3.7.1
