--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ click==8.2.1
 distro==1.9.0
 dnspython==2.7.0
 easyocr==1.7.2
+ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.13
 fastapi-cli==0.0.7
@@ -55,6 +56,7 @@ Pygments==2.19.1
 pyparsing==3.2.3
 python-bidi==0.6.6
 python-dotenv==1.1.0
+python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.4
@@ -67,6 +69,7 @@ scipy==1.15.3
 setuptools==80.9.0
 shapely==2.1.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.46.2
@@ -84,4 +87,3 @@ uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
-python-jose
