--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ openai==1.88.0
 playwright==1.52.0
 proto-plus==1.26.1
 protobuf==6.31.1
+psycopg2-binary==2.9.10
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
