--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,10 @@
+aiofiles==23.2.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.9.0
+attrs==25.3.0
 cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
@@ -10,6 +15,7 @@ ecdsa==0.19.1
 email_validator==2.2.0
 fastapi==0.115.13
 fastapi-cli==0.0.7
+frozenlist==1.7.0
 google-api-core==2.25.1
 google-api-python-client==2.172.0
 google-auth==2.40.3
@@ -28,9 +34,11 @@ jiter==0.10.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+multidict==6.5.0
 oauthlib==3.3.0
 openai==1.88.0
 playwright==1.52.0
+propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.31.1
 psycopg2-binary==2.9.10
@@ -38,6 +46,7 @@ pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+pydoll-python==2.2.3
 pyee==13.0.0
 Pygments==2.19.1
 pyparsing==3.2.3
@@ -64,4 +73,5 @@ urllib3==2.5.0
 uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.1.0
-websockets==15.0.1
+websockets==13.1
+yarl==1.20.1
